# ipython-b3d

./: README.md  demo_debug.py  demo_watcher.py  flake.nix  otherparameters.py  pyproject.toml  treefmt.nix
.github/workflows/: pytest.yml
src/ipython_b3d/: config.py  logging.py  main.py  main2.py  monitor.py  util.py  viewer.py
tests/: _config.py  test_debugger.py  test_dummy.py  test_import.py  test_ipython.py  test_main.py  test_run.py
tests/samples/: debugger.py  import_debugger.py  import_simple.py
