[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["build123d>=0.10.0", "ipdb>=0.13.13", "pdbpp>=0.12.1", "pytest>=9.0.2"]

[project]
name = "ipython-b3d"
version = "0.1.0"
description = "IPython wrapper for build123d and cadquery projects (linux/macos only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "inquirerpy>=0.3.4",
  "ipython>=9.11.0",
  "ocp-vscode>=3.1.2",
  "watchdog>=6.0.0"
]

[project.scripts]
ipb3d = "ipython_b3d.main:main"
ipython-b3d = "ipython_b3d.main:main"
